# ChangeLog for app-misc/gentoo
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/gentoo/ChangeLog,v 1.82 2009/05/21 18:30:48 armin76 Exp $

  21 May 2009; Raúl Porcel <armin76@gentoo.org> gentoo-0.15.4.ebuild:
  ia64 stable wrt #269895

  20 May 2009; nixnut <nixnut@gentoo.org> gentoo-0.15.4.ebuild:
  ppc stable #269895

  19 May 2009; Brent Baude <ranger@gentoo.org> gentoo-0.15.4.ebuild:
  stable ppc64, bug 269895

  16 May 2009; Jeroen Roovers <jer@gentoo.org> gentoo-0.15.4.ebuild:
  Stable for HPPA (bug #269895).

  16 May 2009; Tobias Klausmann <klausman@gentoo.org> gentoo-0.15.4.ebuild:
  Stable on alpha, bug #269895

  15 May 2009; Markus Meier <maekke@gentoo.org> gentoo-0.15.4.ebuild:
  amd64 stable, bug #269895

  15 May 2009; Ferris McCormick <fmccor@gentoo.org> gentoo-0.15.4.ebuild:
  Sparc stable, Bug #269895.

  15 May 2009; Christian Faulhammer <fauli@gentoo.org> gentoo-0.15.4.ebuild:
  stable x86, bug 269895

*gentoo-0.15.4 (30 Apr 2009)

  30 Apr 2009; Samuli Suominen <ssuominen@gentoo.org> -files/gentoo.desktop,
  -gentoo-0.11.56.ebuild, -gentoo-0.15.3.ebuild, +gentoo-0.15.4.ebuild:
  Version bump.

*gentoo-0.15.3 (27 Apr 2009)

  27 Apr 2009; Patrick Lauer <patrick@gentoo.org> +gentoo-0.15.3.ebuild:
  Bump to 0.15.3, fixes #264162

  29 Jun 2008; Samuli Suominen <ssuominen@gentoo.org> gentoo-0.11.55.ebuild,
  gentoo-0.11.56.ebuild:
  Fix typing error, newan -> newman. Thanks to Olivier Huber, bug 228315.

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing seemant from metadata.xml as per #202469.

  01 Jun 2007; Christian Faulhammer <opfer@gentoo.org> ChangeLog:
  modified ChangeLog to meet common format

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*gentoo-0.11.56 (09 Oct 2006)

  09 Oct 2006; Seemant Kulleen <seemant@gentoo.org> +gentoo-0.11.56.ebuild: