@@ -1,4 +1,6 @@
 DIST gentoo-0.15.4.tar.gz 1468308 RMD160 22722dcd023d031a20c58a31758209cc548be30e SHA1 e191ca5603673e3610b82111c6d6dced074b1454 SHA256 f17a5030370cd9ceeaef076bfe3fbd13da3f50e674f8cd706449a48d70d28fd3
+DIST gentoo-0.15.6.tar.gz 1467732 RMD160 8baf1db8926211dc2839484cdce48393b2bacbc6 SHA1 9de0c09aa03babeee714dcc99b1a594035426379 SHA256 c3108bd7bcd6dc0f19c0f30dab4f6ce0f36d2d020048899c74d5667afe439d9d
 EBUILD gentoo-0.15.4.ebuild 1315 RMD160 02f84933d95ee2d7dd1b2917591b633f7ebf20fe SHA1 535858295c6ffd5c86c3a56c86976e5817cb7319 SHA256 f2452729434139152d0fab48277862074b799b4dc921b32022f8706ef9499ac5
-MISC ChangeLog 12385 RMD160 bdfd2b4370856352574230c93895f4db24533615 SHA1 a8b2c235587e66e6aacbcc3859dc69d4a907b810 SHA256 1a70d2715e0f3068ac4736f36179cfd84f1010300168b57b981922ab629fcb72
+EBUILD gentoo-0.15.6.ebuild 1290 RMD160 05490cdafda9c2ba8eff6a85970e892aa981906b SHA1 580f0d79b82d5a9bf0841d25a55208a25325cc50 SHA256 15ebe654f5543ac88a69704034f99d1ad1f9f3706d58cad7a429ce9c9b92bc69
+MISC ChangeLog 12511 RMD160 39234ddb5240c063d427364aa97847b4e49ea5eb SHA1 8779f31ac7bda29c756afe6c95e0a22b2b316e7b SHA256 52b12e72c50835c539c1a5afb675e4a68ad4965eb4bcdd8390f62d4b7f931f48
 MISC metadata.xml 166 RMD160 7b80226659bf40e97050b1ffce1858d5f20b3c60 SHA1 e6c6436c304a65b4a012a5b7be7ee264b228a645 SHA256 8e7de0a7f7c15840474de373a3ce36adcc5dd658b2e4d18366fcb63b964a0826
