@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/gentoo
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/gentoo/ChangeLog,v 1.82 2009/05/21 18:30:48 armin76 Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/gentoo/ChangeLog,v 1.83 2010/02/08 09:25:06 ssuominen Exp $
+
+*gentoo-0.15.6 (08 Feb 2010)
+
+  08 Feb 2010; Samuli Suominen <ssuominen@gentoo.org> +gentoo-0.15.6.ebuild:
+  Version bump.
 
   21 May 2009; Raúl Porcel <armin76@gentoo.org> gentoo-0.15.4.ebuild:
   ia64 stable wrt #269895
